[UHMEP-2506] change onkeyup to oninput so that paste event can be detected

--- a/reuse/code/dialogs/assign-prescription/assign-prescription.dialog.html
+++ b/reuse/code/dialogs/assign-prescription/assign-prescription.dialog.html
@@ -27,7 +27,7 @@
               [placeholder]="'prescription.assignPerformer.searchPerformerPlaceHolder' | translate"
               [validation]="queryIsNumeric"
               maxlength="50"
-              (keyup)="onKeyUp($event)"
+              (input)="onInput($event)"
             >
             @if (!queryIsNumeric) {
               <mat-hint align="end">{{ control.value?.length }}/ {{ caregiverNameMaxLength }}
