--- a/wc-prescription-list/src/index.html
+++ b/wc-prescription-list/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script src="/assets/keycloak.js"></script>
+  <script src="keycloak.js"></script>
 </head>
 <body>
 <script>
