[UHMEP-2466] add  new function to check that uniquename works for update mode...

--- a/reuse/code/dialogs/create-prescription-modal/create-prescription-model.dialog.html
+++ b/reuse/code/dialogs/create-prescription-modal/create-prescription-model.dialog.html
@@ -9,6 +9,8 @@
           [formControlName]="'name'"
           matInput
           data-cy="prescription-modal-dialog-input"
+          minlength="1"
+          maxlength="100"
         />
         @if (formGroup.get('name')?.hasError('required')) {
           <mat-error>{{ 'common.mandatory' | translate }}</mat-error>
